bynkc/tests/fixtures/positive/112_auto_lift_in_branches/input.karn
commons demo

fn classify(n: Int) -> Effect[Int] {
  if n == 0 {
    0
  } else if n > 0 {
    1
  } else {
    -1
  }
}
