bynkc/tests/fixtures/negative/164_empty_list_uninferable/input.karn
commons bad {
  fn f() -> Int {
    let xs = []
    0
  }
}
